RESOLVED FIXED157361
REGRESSION(r200422): Web Inspector: Make new Array Iterator objects play nice with Web Inspector
https://bugs.webkit.org/show_bug.cgi?id=157361
Summary REGRESSION(r200422): Web Inspector: Make new Array Iterator objects play nice...
Joseph Pecoraro
Reported 2016-05-04 15:13:10 PDT
* SUMMARY REGRESSION(r200422): Make new Array Iterator objects play nice with Web Inspector. * STEPS TO REPRODUCE 1. js> [1,2,3].entries() * EXPECTED ▶︎ Array Iterator [[0, 1], [1, 2], [2, 3]] ▼ Array Iterator array: [1, 2, 3] (3) kind: "key+value" * ACTUAL {} * NOTES - Covered by test LayoutTests/inspector/model/remote-object.html
Attachments
[PATCH] Proposed Fix (23.04 KB, patch)
2016-05-04 15:16 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2016-05-04 15:14:28 PDT
Joseph Pecoraro
Comment 2 2016-05-04 15:16:19 PDT
Created attachment 278131 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2016-05-05 18:14:45 PDT
Comment on attachment 278131 [details] [PATCH] Proposed Fix Clearing flags on attachment: 278131 Committed r200499: <http://trac.webkit.org/changeset/200499>
WebKit Commit Bot
Comment 4 2016-05-05 18:14:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.