REGRESSION(r200422): Web Inspector: Make new Array Iterator objects play nice with Web Inspector https://bugs.webkit.org/show_bug.cgi?id=157361 <rdar://problem/26099793>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-05-05
Reviewed by Timothy Hatcher.

Source/JavaScriptCore:

* builtins/ArrayPrototype.js:
(createArrayIterator):
(values):
(keys):
(entries):
* builtins/TypedArrayPrototype.js:
(values):
(keys):
(entries):
* runtime/CommonIdentifiers.h:
Set the kind on the iterator object, that can be shown
to the inspector if the object is shown in the console.

* inspector/InjectedScriptSource.js:
(InjectedScript.prototype._describe):
Get a better name for the new Array Iterator which is just an Object.

* inspector/JSInjectedScriptHost.cpp:
(Inspector::JSInjectedScriptHost::subtype):
(Inspector::JSInjectedScriptHost::getInternalProperties):
Detect and handle ArrayIterator object instances. Porting the code
from the JSArrayIterator code path.

LayoutTests:

* platform/mac/inspector/model/remote-object-expected.txt:

Canonical link: https://commits.webkit.org/175530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200499 268f45cc-cd09-0410-ab3c-d52691b4dbfc